fix layout issue in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -95,8 +95,11 @@ body {
   background-color: #FEF800;
 }
 
-#resource-hub .product {
+#resources .product {
   display: inline-block;
+  float: none;
+  margin-left: -0.3em;
+  vertical-align: top;
 }
 
 .product cite {
